--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.10",
-    "@mui/styled-engine-sc": "^5.10.6",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "5.0.0-alpha.101",
+    "@mui/material": "^5.10.10",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@mui/system": "^5.10.7",
     "@mui/x-data-grid": "^5.17.4",
     "react": "^18.2.0",
@@ -28,17 +28,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@mui/types": "^7.2.0",
-
     "@babel/plugin-transform-typescript": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@mui/types": "^7.2.0",
     "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "@vitejs/plugin-react": "^2.1.0",
