--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/system": "^5.10.7",
     "@mui/x-data-grid": "^5.17.4",
+    "axios": "^1.1.3",
+    "miragejs": "^0.1.46",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
