--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^5.17.4",
     "axios": "^1.1.3",
     "miragejs": "^0.1.46",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
