--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "check-types": "tsc --noEmit",
-    "lint": "npm run-s check-types"
+    "lint": "npm run-s check-types",
+    "config-env": "cp .env.example .env"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -20,7 +21,10 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/system": "^5.10.7",
     "@mui/x-data-grid": "^5.17.4",
+    "@sentry/react": "^7.21.1",
+    "@sentry/tracing": "^7.21.1",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "miragejs": "^0.1.46",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
